--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,21 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.rhaggarty</groupId>
     <artifactId>maven-protoc-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <version>1.0-SNAPSHOT</version>
+    <url>http://code.google.com/p/maven-protoc-plugin/</url>
     <name>maven-protoc-plugin Maven Mojo</name>
-    <url>http://maven.apache.org</url>
+    <description>A simple protoc plugin for maven.  This plugin will compile and package .proto files and add them to the project if required.</description>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
 
     <build>
         <plugins>
@@ -21,7 +29,13 @@
                 </configuration>
             </plugin>
         </plugins>
-    </build>
+    </build>    
+    
+    <scm>
+        <connection>scm:hg:https://maven-protoc-plugin.googlecode.com/hg/trunk</connection>
+        <developerConnection>scm:hg:https://maven-protoc-plugin.googlecode.com/hg/trunk</developerConnection>
+        <url>scm:hg:https://maven-protoc-plugin.googlecode.com/hg/</url>
+    </scm>
 
     <dependencies>
         <!-- Maven -->
@@ -35,7 +49,7 @@
             <artifactId>maven-project</artifactId>
             <version>2.0.9</version>
         </dependency>
-    
+
         <!-- General Third Party -->
         <dependency>
             <groupId>commons-io</groupId>
